--- a/main.ipynb
+++ b/main.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pràctica 7. Ús de bucles condicionals i funcions amb Tkinter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Tres en ratlla"
    ]
   },
@@ -27,9 +20,7 @@
    "source": [
     "David Morales\n",
     "\n",
-    "09/12/2020\n",
-    "\n",
-    "Grup M2"
+    "09/12/2020"
    ]
   },
   {
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digues un valor enter: 4\n",
-      "Aquest valor no està entre el 1 i el 3\n",
-      "Digues un valor enter: 1\n"
+      "Aquest valor no està entre el 1 i el 3\n"
      ]
     },
     {
@@ -96,7 +85,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +677,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -702,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
